# rust_servers_services_apps

./: .gitignore  readme.md
ezytutors/: Cargo.toml  run_basic-server.sh  run_tutor-nodb-svc.sh
ezytutors/.local/thunder-tests/: thunderActivity.db  thunderCollection.db  thunderclient.db
ezytutors/src/: keep.md
ezytutors/tutor-db/: .env  Cargo.toml  database.sql  database_c5.sql  readme.md  run_iter3.sh  run_iter5.sh  run_pgdb.sh  test_iter2.sh
ezytutors/tutor-db/src/iter2/: handlers.rs  models.rs
ezytutors/tutor-db/src/iter3/: handlers.rs
ezytutors/tutor-db/src/iter4/: db_access.rs  handlers.rs
ezytutors/tutor-db/src/iter5/: routes.rs
ezytutors/tutor-db/src/iter5/dbaccess/: course.rs  mod.rs  tutor.rs
ezytutors/tutor-db/src/iter5/dbscripts/: course.sql  tutor.sql
ezytutors/tutor-db/src/iter5/handlers/: course.rs  general.rs  mod.rs  tutor.rs
ezytutors/tutor-db/src/iter5/models/: course.rs  mod.rs
ezytutors/tutor-nodb/: Cargo.toml  readme.md
ezytutors/tutor-nodb/src/: handlers.rs  models.rs  routes.rs  state.rs
ezytutors_v2/: Cargo.toml
ezytutors_v2/src/: keep.md
ezytutors_v2/tutor-web-app-ssr/: .env  Cargo.toml  readme.md  run_iter1.sh  run_iter2.sh  run_iter5.sh
ezytutors_v2/tutor-web-app-ssr/src/iter5/: dbaccess.rs  errors.rs  handlers.rs  mod.rs  model.rs  models.rs  routes.rs  state.rs
ezytutors_v2/tutor-web-app-ssr/src/iter5/dbscripts/: user.sql
ezytutors_v2/tutor-web-app-ssr/static/: static-web-page.html  tutor-styles.css
ezytutors_v2/tutor-web-app-ssr/static/iter1/: index.html
ezytutors_v2/tutor-web-app-ssr/static/iter4/: list.html
ezytutors_v2/tutor-web-app-ssr/static/iter5/: register.html
ezytutors_v2/tutor-web-service/: Cargo.toml  readme.md  run_iter4.sh  run_pgdb.sh
ezytutors_v2/tutor-web-service/src/iter2/: handlers.rs
ezytutors_v2/tutor-web-service/src/iter3/: db_access.rs  routes.rs
ezytutors_v2/tutor-web-service/src/iter4/: errors.rs
ezytutors_v2/tutor-web-service/src/iter5/: errors.rs  routes.rs
ezytutors_v2/tutor-web-service/src/iter5/dbscripts/: course.sql  tutor.sql
ezytutors_v2/tutor-web-service/src/iter5/handlers/: tutor.rs
ezytutors_v2/tutor-web-service/src/iter5/models/: tutor.rs
scenario1/: Cargo.toml  readme.md  run_httpserver.sh  run_tcpclient.sh  run_tcpserver.sh
scenario1/http/src/: httprequest.rs  httpresponse.rs
scenario1/httpserver/: Cargo.toml
scenario1/httpserver/src/: handler.rs  router.rs  server.rs
scenario1/tcpclient/: Cargo.toml
scenario1/tcpclient/src/: main.rs
scenario1/tcpserver/src/: main.rs
