[package]
authors = ["dxps <marius.ileana@gmail.com>"]
edition = "2018"
name = "tutor-db"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

## Actix Web and Runtime.
actix-rt = "1.1.1"
actix-web = "3.3.2"

## Data serialization lib.
serde = {version = "1.0.127", features = ["derive"]}

## Time related lib.
chrono = {version = "0.4.19", features = ["serde"]}

## Environment variable access lib.
dotenv = "0.15"

## Postgres access lib.
sqlx = {version = "0.5.5", default_features = false, features = ["postgres", "runtime-tokio", "macros", "chrono"]}

## OpenSSL for build (if `openssl` is not already installed on the build systems)
openssl = {version = "0.10.35", features = ["vendored"]}
