[package]
authors = ["dxps <marius.ileana@gmail.com>"]
edition = "2018"
name = "tutor-db"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

## Actix Web and Runtime.
# actix-rt = "1.1.1"
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.8"
tokio = "1.9.0"

## Data serialization lib.
serde = {version = "1.0.127", features = ["derive"]}

## Time related lib.
chrono = {version = "0.4.19", features = ["serde"]}

## Environment variable access lib.
dotenv = "0.15"

## Postgres access lib.
sqlx = {version = "0.5.5", default_features = false, features = ["postgres", "runtime-actix-native-tls", "macros", "chrono"]}

## OpenSSL for build (if `openssl` is not already installed on the build systems)
openssl = {version = "0.10.35", features = ["vendored"]}

## Logging lib.
env_logger = "0.9.0"

## Tracing lib for logging and other telemetry features.
tracing = {version = "0.1", features = ["log"]}
