[package]
name = "tutor-nodb"
version = "0.1.0"
authors = ["dxps <marius.ileana@gmail.com>"]
edition = "2018"


[[bin]]
name = "basic-server"


[dependencies]
actix-web = "3.2.2"
actix-rt = "1.1.1"
serde = { version = "1.0.124", features = [ "derive"] }
chrono = { version = "0.4.19", features = [ "serde" ] }

