[package]
name = "tutor-nodb"
version = "0.1.0"
authors = ["dxps <marius.ileana@gmail.com>"]
edition = "2018"
default-run="tutor-service"


[dependencies]

# Actix Web and Runtime.
actix-web = "^3.3"
actix-rt = "1.1.1"

# Data serialization library.
serde = { version = "1.0.124", features = [ "derive"] }

# Time related library.
chrono = { version = "0.4.19", features = [ "serde" ] }


[[bin]]
name = "basic-server"

[[bin]]
name = "tutor-service"

