[package]
authors = ["dxps <marius.ileana@gmail.com>"]
default-run = "tutor-nodb_svc"
edition = "2018"
name = "tutor-nodb"
version = "0.1.0"

[dependencies]

# Actix Web and Runtime.
actix-rt = "1.1.1"
actix-web = "3.3.2"

# Data serialization library.
serde = {version = "1.0.124", features = ["derive"]}

# Time related library.
chrono = {version = "0.4.19", features = ["serde"]}

[[bin]]
name = "basic-server"

[[bin]]
name = "tutor-nodb_svc"
