[package]
edition = "2018"
name = "tutor-web-app-ssr"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

## Actix Web and Runtime.
# actix-rt = "1.1.1"
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.8"
tokio = "1.9.0"

actix-files = "0.6.0-beta.6"

serde = {version = "1", features = ["derive"]}

tera = "1.12.1"
