[package]
edition = "2018"
name = "tutor-web-app-ssr"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

## Actix Web and Runtime.
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.8"
tokio = "1.9.0"

actix-files = "0.6.0-beta.6"
awc = {version = "3.0.0-beta.7", default-features = false}

serde = {version = "1.0.129", features = ["derive"]}
serde_json = "1.0.67"

tera = "1.12.1"

rust-argon2 = "0.8.3"
sqlx = {version = "0.5.7", default_features = false, features = ["postgres", "runtime-actix-native-tls", "macros"]}

dotenv = "0.15.0"
